changed to cpu-based rendering